[tool.poetry]
name = "tmts"
version = "0.1.0"
description = ""
authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
requests = "^2.24.0"
requests_cache = "^0.5.2"
rich = "^8.0.0"
cachier = "^1.4.3"
pyprojroot = "^0.2.0"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
black = "^20.8b1"
pylama = "^7.7.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
